package com.uitopic.restock.platform.communications.domain.model.valueobjects;

/**
 * Enumeration representing the read/unread status of a notification.
 *
 * This enum is used to track whether a notification has been read by the recipient or not.
 */
public enum NotificationStatus {
    UNREAD,
    READ
}
