package com.uitopic.restock.platform.communications.domain.model.valueobjects;

/**
 * Enumeration representing the source type of notification.
 */
public enum SourceType {
    INVENTORY,
    DISCREPANCY,
    DEVICE
}
